--- a/index.html
+++ b/index.html
@@ -444,6 +444,13 @@
                         </ul>
 
                     </div>
+                <div class="form">
+                    <h3 class="title-join">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
+                    <label>
+                        <input type="email" placeholder="E-mail">
+                        <button class="submit-btn" type="submit">Подписаться</button>
+                    </label>
+                </div>
             </div>
     </footer>
     <script src="./js/modal.js"></script>
