--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
                         <use href="./Images/symbol-defs.svg#close">
                         </use>
                     </svg></button>
+                    <form >
+                       <div class="modal-form">
+                        <label for="name">Имя
+                            <input type="text"name="name">
+                        </label>
+                        <label for="tel" >Телефон
+                            <input type="tel" name="tel">
+                        </label>
+                        <label for="email" >Почта
+                            <input type="email" name="email">
+                        </label>
+                        <label for="comment">Комментарий
+                            <textarea name="comment" id="" cols="" rows="10"></textarea>
+                        </label>
+                          <input type="checkbox">
+                          <label for="">Соглашаюсь с рассылкой и принимаю 
+                              <a href="">Условия договора</a>
+                          </label>
+                        <button type="submit">Отправить
+                        </button>
+                       </div>
+                    </form>
                 </div>
             </div>
         </section>
