--- a/index.html
+++ b/index.html
@@ -72,14 +72,23 @@
                        <div class="form-field">
                         <label class="form-label" for="name" id="name">Имя</label>
                         <input class="form-input" type="text"name="name">
+                        <svg class="form-icon"width="18px" height="18px">
+                            <use  href="./Images/symbol-defs.svg#person"></use>
+                        </svg>
                         </div>
                         <div class="form-field">
                         <label class="form-label" for="tel" >Телефон</label>
                         <input class="form-input" type="tel" name="tel" id="tel">
+                        <svg class="form-icon"width="13px" height="13px">
+                            <use  href="./Images/symbol-defs.svg#phone"></use>
+                        </svg>
                         </div>
                         <div class="form-field">
                         <label class="form-label" for="email" >Почта</label>
                         <input class="form-input" class="form-input" type="email" name="email" id="email">
+                        <svg class="form-icon"width="15px" height="12px">
+                            <use  href="./Images/symbol-defs.svg#emaile"></use>
+                        </svg>
                         </div>
                         <div class="form-field"> 
                         <label class="form-label" for="comment">Комментарий</label>
