--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
-                    <button  data-modal-close class="modal-btn">
+                    <button data-modal-close class="modal-btn">
                     <svg width="18px" height="18px" class="modal-btn-icon">
                         <use href="./Images/symbol-defs.svg#close">
                         </use>
@@ -287,7 +287,7 @@
                                 <li class="net-name">
                                     <a class="social-link"  href="">
                                         <svg width="20px" height="20px"
-                                        height="20px"  class="social-item">
+                                        class="social-item">
 
                                             <use
                                                 href="./Images/symbol-defs.svg#instagram">
@@ -297,7 +297,7 @@
                                 </li>
                                 <li class="net-name">
                                     <a class="social-link" href="">
-                                        <svg width="20px" height="16px class="social-item">
+                                        <svg width="20px" height="16px" class="social-item">
                                             <use
                                                 href="./Images/symbol-defs.svg#twitter">
                                             </use>
@@ -333,7 +333,7 @@
                             <ul class="social-net">
                                 <li class="net-name">
                                     <a class="social-link"     href="">
-                                    <svg width="20px" height="20px class="social-item">
+                                    <svg width="20px" height="20px" class="social-item">
                                         <use
                                             href="./Images/symbol-defs.svg#instagram">
                                         </use>
@@ -458,7 +458,7 @@
                             </li>
                             <li class="net-name-footer">
                                <a class="footer-link" href="">
-                                <svg width="20px" height="16px class="social-item">
+                                <svg width="20px" height="16px" class="social-item">
                                     <use
                                         href="./Images/symbol-defs.svg#twitter">
                                     </use>
