--- a/portfolio.html
+++ b/portfolio.html
@@ -257,8 +257,8 @@
                     <div class="subscribe-form">
                         <form>
                             <h3 class="title-join">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
-                        <label for="email"></label>
-                        <div class="subscribe-field"><input class="footer-input" type="email" name="email" id="email" placeholder="E-mail">
+                        <label for="subscribe"></label>
+                        <div class="subscribe-field"><input class="footer-input" type="email" name="subscribe" id="subscribe" placeholder="E-mail">
                             <button class="subscribe-btn" type="submit">Подписаться
                                 <svg class="subscribe-icon" width="24px" height="24px">
                                     <use href="./Images/symbol-defs.svg#send">
