agree text added

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                             <span class="icon">
 
                             </span>
-                            Соглашаюсь с рассылкой и принимаю 
+                            <span class="agree-text">Соглашаюсь с рассылкой и принимаю </span>
+                            
                             <a class="agree" href=""> Условия договора</a>
                         </label>
                         </div>
